automatically backed up by learn

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,5 +7,5 @@
   <label>Post Description</label><br>
   <%= text_area_tag :'post[description]', @post.description %><br>
 
-  <%= submit_tag "Submit Post" %>
+  <%= submit_tag "Update Post" %>
 <% end %>
