--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <h3>Post Form</h3>
 
-<%= form_tag post_path(@post), method: "patch" do %>
+<%= form_for post_path(@post), method: "patch" do %>
   <label>Post title:</label><br>
   <%= text_field_tag :'post[title]', @post.title %><br>
 
