--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,11 +1,11 @@
 <h3>Post Form</h3>
 
-<%= form_for post_path(@post), method: "patch" do %>
+<%= form_for(@post) do |f| %>
   <label>Post title:</label><br>
-  <%= text_field_tag :'post[title]', @post.title %><br>
+  <%= f.text_field :'post[title]', @post.title %><br>
 
   <label>Post Description</label><br>
-  <%= text_area_tag :'post[description]', @post.description %><br>
+  <%= f.text_area :'post[description]', @post.description %><br>
 
-  <%= submit_tag "Update Post" %>
+  <%= f.submit "Update Post" %>
 <% end %>
