--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -7,5 +7,5 @@
   <label>Post Description</label><br>
   <%= f.text_area :'post[description]', @post.description %><br>
 
-  <%= f.submit "Update Post" %>
+  <%= f.submit :"Update Post" %>
 <% end %>
