--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,10 +2,10 @@
 
 <%= form_for(@post) do |f| %>
   <label>Post title:</label><br>
-  <%= f.text_field :'post[title]', @post.title %><br>
+  <%= f.text_field :'post[title]' %><br>
 
   <label>Post Description</label><br>
-  <%= f.text_area :'post[description]', @post.description %><br>
+  <%= f.text_area :'post[description]' %><br>
 
   <%= f.submit "Update Post" %>
 <% end %>
